--- a/trackia/package.json
+++ b/trackia/package.json
@@ -15,7 +15,8 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-speech-recognition": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
